--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,15 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin-top: 100px;
 }
 
 .slide-container {
-  min-height: 100px;
-  min-width: 100px;
-  max-height: 400px;
-  max-width: 500px;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
 }
 .slide-container > img {
   height: 400px;
@@ -24,20 +26,24 @@
   display: block;
 }
 
-.carousel-btn-active {
-  border-radius: 20px;
-  background-color: cadetblue;
+.prev,
+.next {
   cursor: pointer;
-}
-.carousel-btn {
-  border-radius: 20px;
-  cursor: pointer;
-  background-color: cadetblue;
+  top: 50%;
+  width: auto;
+  color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 25px;
   transition: 0.6s ease;
-
+  border-radius: 50% 0;
   user-select: none;
+  margin: 20px;
+  padding: 15px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .access-btn {
@@ -45,7 +51,7 @@
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: blanchedalmond;
+  background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -55,17 +61,18 @@
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: black;
+  background-color: #717171;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
-.image-btns {
+.access-btns {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  margin-top: 10px;
 }
 
 .fade {
